Fix code wrap inside text box, Bootstrap 4.2.1

--- a/www/resources/bootstrap/bootstrap.scss
+++ b/www/resources/bootstrap/bootstrap.scss
@@ -7,7 +7,7 @@ $theme-colors: (
   warning: #ffc107,
   danger: #dc3545,
   light: #f8f9fa,
-	primary-light: #64b5f6,
+  primary-light: #64b5f6,
   dark: #343a40
 );
 
@@ -50,8 +50,8 @@ $display4-size: 3.5 * $font-size-base;
 
 $border-radius: .25rem;
 
-
-@import 'bootstrap-4.1.3';
+// Import file: bootstrap.scss, get entire scss folder from: https://github.com/twbs/bootstrap/releases
+@import 'bootstrap-4.2.1';
 
 body > * {
   background-size: cover;
@@ -160,7 +160,7 @@ footer img {
 .code {
   font-family: Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New,monospace;
   font-size: 85%;
-  white-space: nowrap;
+  white-space: pre;
 }
 
 .datagrid {
